--- a/src/Jili/ApiBundle/Resources/config/routing.yml
+++ b/src/Jili/ApiBundle/Resources/config/routing.yml
@@ -62,5 +62,9 @@ remind:
     resource: "@JiliApiBundle/Controller/RemindController.php"
     type:     annotation
     prefix:   /
+api-offer99:
+    resource: "@JiliApiBundle/Controller/Offer99Controller.php"
+    type:     annotation
+    prefix:   /
 
 
