--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -35,6 +35,8 @@ twig:
     globals:
         offerwow_com:
             websiteid: %offerwow_com.websiteid%  
+        offer99_com:
+            pid: %offer99_com.pid%  
 # Assetic Configuration
 assetic:
     debug:          %kernel.debug%
