--- a/app/config/custome_parameters.yml
+++ b/app/config/custome_parameters.yml
@@ -18,17 +18,33 @@ parameters:
     emar_com.cps.task_type: 1 
 
 # jili
-    emar_com.app_AppKey: '139216929186018017' 
-    emar_com.app_AppSecret: 'e7c5367e1ba7d609865389640007df3e'
+# 139597428026718017
+# AppSecret：53a77a65327cdd28bff99da8f9f542cf
+    emar_com.app_AppKey: '139597428026718017' 
+    emar_com.app_AppSecret: '53a77a65327cdd28bff99da8f9f542cf'
+# search 
+#   emar_com.app_AppKey: '139216929186018017' 
+#   emar_com.app_AppSecret: 'e7c5367e1ba7d609865389640007df3e'
 
 #    $sdk =array('1326528120671', '4090a94e6c98c2a3c3cf1634cdf29730');
     emar_com.sdk.app_AppKey: '1326528120671'
     emar_com.sdk.app_AppSecret:  '4090a94e6c98c2a3c3cf1634cdf29730'
-
+    
 #    $demo = array('1331544511075406', '1d4abbec4489880adaf9154d948d9be8');
     emar_com.demo.app_AppKey: '1331544511075406'
     emar_com.demo.app_AppSecret: '1d4abbec4489880adaf9154d948d9be8'
+
 #    $jili = array('139216929186018017','e7c5367e1ba7d609865389640007df3e');
+    emar_com.open_api.app:
+        debug:
+            key: '139597428026718017'
+            secret: '53a77a65327cdd28bff99da8f9f542cf'
+        search:
+            key: '139216929186018017'
+            secret: 'e7c5367e1ba7d609865389640007df3e'
+        cron:
+            key: '139599061334718017'
+            secret: '98a77033e7a6e8b8533f70eca181d09f '
 
 
     emar_com.page_size: 20 
