#249 增加页首搜索框的js, common.js

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -44,6 +44,8 @@ twig:
         emar_max_of_total: %emar_com.max_of_total%
         emar_api_orderby_range: %emar_com.api.orderby_range% # [1,2,3] 
         emar_api_orderby_default: %emar_com.api.orderby_default% # 1 
+        rt_of_search_form: %emar_com.rt_of_search_form.name% # {commodity :0, shop: 1}
+
         offer99_com:
             pid: %offer99_com.pid%  
 # Assetic Configuration
