--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,10 @@
+_homepage:
+    path: /
+    defaults: { _controller: JiliApiBundle:Top:index }
+
+jili_api:
+    resource: "@JiliApiBundle/Resources/config/routing.yml"
+
 jili_emar:
     resource: "@JiliEmarBundle/Resources/config/routing.yml"
     prefix:   /emar
@@ -6,8 +13,6 @@ jili_backend:
     resource: "@JiliBackendBundle/Resources/config/routing.yml"
     prefix:   /backend
 
-jili_api:
-    resource: "@JiliApiBundle/Resources/config/routing.yml"
 gregwar_captcha_routing:
     resource: "@GregwarCaptchaBundle/Resources/config/routing/routing.yml"
     prefix: /_gcb
