--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,6 +37,7 @@ twig:
             websiteid: %offerwow_com.websiteid%  
         emar_cps:
             category_id: %emar_com.cps.category_type%
+        emar_cps_default_rebate: %emar_com.cps.action.default_rebate%
         emar_page_size: %emar_com.page_size%
         emar_page_size_shoplist: %emar_com.page_size_of_shoplist%
         emar_page_size_search: %emar_com.page_size_of_search% 
