--- a/app/config/custome_parameters.yml
+++ b/app/config/custome_parameters.yml
@@ -1,4 +1,3 @@
-
 parameters:
     offerwow_com.websiteid: 1162  
     offerwow_com.key: "91jili2offerwow"
@@ -13,7 +12,7 @@ parameters:
     offer99_com.task_type: 5
 
     cpa.category_type:  1 # in table ad_category where category_name='CPA'
-    cps.category_type:  1 # in table ad_category where category_name='CPA'
+    cps.category_type:  1 # in table ad_category where category_name='CPS'
                     
     emar_com.accountid: '458631' # sid uSer id
     emar_com.91jili_com.websiteid: '708089' # wid Website id
@@ -27,23 +26,15 @@ parameters:
 #    emar_com.cpa.category_type: 20 # in ad_category table where cateogry_name ='emar' ??
 
 # jili
-# 139597428026718017
-# AppSecret：53a77a65327cdd28bff99da8f9f542cf
     emar_com.app_AppKey: '139597428026718017' 
     emar_com.app_AppSecret: '53a77a65327cdd28bff99da8f9f542cf'
-# search 
-#   emar_com.app_AppKey: '139216929186018017' 
-#   emar_com.app_AppSecret: 'e7c5367e1ba7d609865389640007df3e'
 
-#    $sdk =array('1326528120671', '4090a94e6c98c2a3c3cf1634cdf29730');
     emar_com.sdk.app_AppKey: '1326528120671'
     emar_com.sdk.app_AppSecret:  '4090a94e6c98c2a3c3cf1634cdf29730'
     
-#    $demo = array('1331544511075406', '1d4abbec4489880adaf9154d948d9be8');
     emar_com.demo.app_AppKey: '1331544511075406'
     emar_com.demo.app_AppSecret: '1d4abbec4489880adaf9154d948d9be8'
 
-#    $jili = array('139216929186018017','e7c5367e1ba7d609865389640007df3e');
     emar_com.open_api.app:
         debug: # dev 
             key: '139597428026718017'
@@ -55,22 +46,30 @@ parameters:
             key: '139599061334718017'
             secret: '98a77033e7a6e8b8533f70eca181d09f'
 
+# emar default 分页大小
     emar_com.page_size: 20 
+# shop list 页面上的分页大小
     emar_com.page_size_of_shoplist: 30 
+# product search页面上的分页大小
     emar_com.page_size_of_search: 24 
+# topcps页面上的分页大小
     emar_com.page_size_of_topcps:  16 
+# emar的open.api读取记录数上限
     emar_com.max_of_total: 1800 
-
+# open.product.search->orderby fields
     emar_com.api.orderby_range: [1,2,3] 
     emar_com.api.orderby_default: 1 
 
+# the router for search input box
     emar_com.rt_of_search_form.name: 
         'commodity': { value: 0 , label: '商品'} 
         'shop': { value: 1, label: '商城' }   
 #        'else': { value: 3, label: '其它2' }   
+
     emar_com.rt_of_search_form.router: 
         - 'jili_emar_product_search'
         - 'jili_emar_websites_shopsearch'  
+# 
     emar_com.pdt_cat.menu:
         - '图书、影音':
             - '图书音像'
