--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -217,3 +217,4 @@ parameters:
     remind_total_point_mailing_id: 80
     file_path_advertiserment_check: /data/91jili/advertiserment_check.log
     file_path_emergency_announcement: /data/91jili/emergency_announcement.log
+    91wenwen_api_url: http://localhost/PointMediaEmar/web/app_dev.php
