--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@
 web\uploads/
 dwsync.xml
 .DS_Store
+.gitignore 
+
+config/
+makefile
+web/images/actionPic/1391840458_3367.jpeg
+web/images/actionPic/1391840458_5171.jpeg
+web/images/banner/1397133290_7671.jpeg
+
