--- a/app/config/custome_parameters.yml
+++ b/app/config/custome_parameters.yml
@@ -28,29 +28,29 @@ parameters:
 #    emar_com.cpa.name: "亿玛活动"
 #    emar_com.cpa.category_type: 20 # in ad_category table where cateogry_name ='emar' ??
 
-# jili
+# cron 
+# key: '139599061334718017'
+# secret: '98a77033e7a6e8b8533f70eca181d09f'
+
+# demo  
+#     '139597428026718017' 
+#     'e7c5367e1ba7d609865389640007df3e'
+
+# NOTICE: product config use demo one. 
     emar_com.app_AppKey: '139597428026718017' 
     emar_com.app_AppSecret: 'e7c5367e1ba7d609865389640007df3e'
 
-    emar_com.sdk.app_AppKey: '139216929186018017'
-    emar_com.sdk.app_AppSecret:  'e7c5367e1ba7d609865389640007df3e'
-    
-    emar_com.demo.app_AppKey: '139216929186018017'
-    emar_com.demo.app_AppSecret: 'e7c5367e1ba7d609865389640007df3e'
 
     emar_com.open_api.app:
         debug: # dev 
-            key: '139216929186018017'
-            secret: 'e7c5367e1ba7d609865389640007df3e'
+            key: %emar_com.app_AppKey%
+            secret: %emar_com.app_AppSecret%
         search: # demo
-            key: '139216929186018017'
-            secret: 'e7c5367e1ba7d609865389640007df3e'
+            key: %emar_com.app_AppKey%
+            secret: %emar_com.app_AppSecret%
         cron: # demo
-            key: '139216929186018017'
-            secret: 'e7c5367e1ba7d609865389640007df3e'
-#        cron: # jili-cron
-#            key: '139599061334718017'
-#            secret: '98a77033e7a6e8b8533f70eca181d09f'
+            key: %emar_com.app_AppKey%
+            secret: %emar_com.app_AppSecret%
 
 # emar default 分页大小
     emar_com.page_size: 20 
