--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,4 +1,4 @@
-imports:
+﻿imports:
     - { resource: parameters.yml }
     - { resource: custome_parameters.yml }
     - { resource: security.yml }
@@ -229,5 +229,5 @@ parameters:
     remind_total_point_mailing_id: 80
     file_path_advertiserment_check: /data/91jili/advertiserment_check.log
     file_path_emergency_announcement: /data/91jili/emergency_announcement.log
-    91wenwen_api_url: http://www.91jili.com
-    is_from_wenwen_register: 2
+    is_from_wenwen_register: 2    
+    91wenwen_api_url: 'http://amy-jili.com'
