--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -227,7 +227,9 @@ parameters:
     remind_point_mailing_id: 72
     remind_total_point_campaign_id: 12
     remind_total_point_mailing_id: 80
+    register_from_wenwen_campaign_id: 7
+    register_from_wenwen_mailing_id: 86
     file_path_advertiserment_check: /data/91jili/advertiserment_check.log
     file_path_emergency_announcement: /data/91jili/emergency_announcement.log
-    is_from_wenwen_register: 2    
-    91wenwen_api_url: 'http://amy-jili.com'
+    91wenwen_api_url: https://www.91jili.com
+    is_from_wenwen_register: 2
