--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,11 @@
+_login:
+    path: /login
+    defaults: { _controller: JiliApiBundle:User:login}
+
+_logout:
+    path: /logout
+    defaults: { _controller: JiliApiBundle:User:logout}
+
 _homepage:
     path: /
     defaults: { _controller: JiliApiBundle:Top:index }
