换行符修改成UNIX

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,4 +1,4 @@
-﻿imports:
+imports:
     - { resource: parameters.yml }
     - { resource: custome_parameters.yml }
     - { resource: security.yml }
