fxied tiny bugs

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,4 +1,5 @@
-﻿imports:
+
+imports:
     - { resource: parameters.yml }
     - { resource: custome_parameters.yml }
     - { resource: security.yml }
