--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ web/images/actionPic/1391840458_3367.jpeg
 web/images/actionPic/1391840458_5171.jpeg
 web/images/banner/1397133290_7671.jpeg
 
+*.swp
