--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -232,5 +232,5 @@ parameters:
     register_from_wenwen_mailing_id: 86
     file_path_advertiserment_check: /data/91jili/advertiserment_check.log
     file_path_emergency_announcement: /data/91jili/emergency_announcement.log
-    91wenwen_api_url: http://www.91jili.com
+    91wenwen_api_url: https://www.91jili.com
     is_from_wenwen_register: 2
