--- a/src/Jili/ApiBundle/Resources/config/services.yml
+++ b/src/Jili/ApiBundle/Resources/config/services.yml
@@ -23,6 +23,7 @@ parameters:
     point_manage.processor.class:  Jili\ApiBundle\EventListener\PointManageProcessor
 # task list 
     task_list.class: Jili\ApiBundle\EventListener\TaskList
+    my_task_list.class: Jili\ApiBundle\EventListener\MyTaskList
 
 services:
     login.listener:
@@ -118,3 +119,10 @@ services:
             - [ setSession, [ @session ] ] 
             - [ setCheckInListener , [ @check_in.listener ] ]
 
+    my_task_list:
+        class: %my_task_list.class%
+        calls:
+            - [ setContainer, [ @service_container ] ] 
+            - [ setLogger, [ @logger ] ] 
+            - [ setEntityManager, [ @doctrine.orm.entity_manager ] ] 
+            - [ setSession, [ @session ] ] 
