--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /web/bundles/
 /app/bootstrap*
 /app/cache/*
+/app/sessions
 /app/logs/*
 /vendor/
 /app/config/parameters.ini
@@ -16,3 +17,4 @@ web/images/actionPic/1391840458_5171.jpeg
 web/images/banner/1397133290_7671.jpeg
 
 *.swp
+.gitignore
