--- a/src/Jili/EmarBundle/Resources/config/config.yml
+++ b/src/Jili/EmarBundle/Resources/config/config.yml
@@ -40,3 +40,8 @@ parameters:
 #    yiqifa_com.name: "亿玛返利"
 #    yiqifa_com.category_type: 18 # in ad_category table where cateogry_name ='yiqifa' ??
 #    yiqifa_com.task_type: 6
+    emar_cache:
+        open.ghs.product.list.get:
+            page_size: { 12: 60} 
+            default: 20 # seconds
+
