#350 added  test case

--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -14,3 +14,6 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+    spool:
+        type: file
+        path: %kernel.root_dir%/cache/%kernel.environment%/swiftmailer.emails
