--- a/src/Jili/EmarBundle/Resources/config/cache.yml
+++ b/src/Jili/EmarBundle/Resources/config/cache.yml
@@ -1,12 +1,16 @@
 parameters:
 # homepage websites hot 
-    cache_config.emar.websites_hot.key: 'emar.product_categories'
-    cache_config.emar.websites_hot.duration:  3623
+    cache_config.emar.websites_hot.key: 'emar.websites_hot'
+    cache_config.emar.websites_hot.duration:  3593
 # homepage product categories 
     cache_config.emar.product_categories.key: 'emar.product_categories'
     cache_config.emar.product_categories.duration:  3623
 # the api response cache:
     cache_config.emar_api:
+        open.website.list.get:
+            default: 3643 
+        open.ghs.cat.get:
+            default: 3541  
         open.ghs.product.list.get:
             page_size: { 12: 3631 } 
             default: 3637 # seconds
