--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -4,6 +4,8 @@ imports:
 framework:
     router:   { resource: "%kernel.root_dir%/config/routing_dev.yml" }
     profiler: { only_exceptions: false }
+    session:
+        gc_maxlifetime:  60 
 
 web_profiler:
     toolbar: true
